# debos

./: .gitignore  BEGINNER_GUIDE.md  CHANGELOG.md  Cargo.toml  Dockerfile  IMPLEMENTATION_PLAN.md  LICENSE  Makefile  NOTICE  README.md  SHELL_INPUT_FIX_SUMMARY.md  TEST_REPORT.md  aarch64-debos.json  run-arm-input.sh  run-arm-pty.sh  run-arm-screen.sh  rust-toolchain.toml  test-input.sh  test-qemu-input.sh  test_commands.sh  test_kernel.py  x86_64-debos.json
kernel/: Cargo.toml  linker-aarch64.ld  linker.ld
kernel/src/: lib.rs  main.rs
kernel/src/arch/: mod.rs
kernel/src/arch/aarch64/: boot.rs  context.rs  exceptions.rs  gic.rs  mmu.rs  mod.rs  uart.rs
kernel/src/arch/x86_64/: context.rs  gdt.rs  idt.rs  mod.rs  paging.rs  serial.rs
kernel/src/capability/: mod.rs
kernel/src/drivers/: mod.rs
kernel/src/drivers/block/: mod.rs
kernel/src/drivers/bus/: mod.rs  pci.rs
kernel/src/drivers/device/: mod.rs  resources.rs  tree.rs
kernel/src/drivers/display/: console.rs  mod.rs
kernel/src/drivers/input/: event.rs  keyboard.rs  mod.rs  mouse.rs
kernel/src/fs/: ext4.rs  fat32.rs  mod.rs  path.rs  permissions.rs  ramfs.rs  vfs.rs  vfs_client.rs  vfs_protocol.rs
kernel/src/ipc/: endpoint.rs  message.rs  mod.rs
kernel/src/memory/: buddy.rs  heap.rs  mod.rs
kernel/src/scheduler/: mod.rs  priority.rs  thread.rs
kernel/src/security/: argon2.rs  auth.rs  capability.rs  credentials.rs  database.rs  identity.rs  mod.rs  policy.rs
kernel/src/shell/: commands.rs  input.rs  mod.rs  sdk.rs
kernel/src/syscall/: dispatcher.rs  handlers.rs  mod.rs
(+50 files in other folders)
