[package]
name = "debos-kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "DeK - DebOS Nano-Kernel: The microkernel core of DebOS"

[dependencies]
spin = { workspace = true }
bitflags = { workspace = true }
log = { workspace = true }
linked_list_allocator = "0.10"

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

# x86_64 specific dependencies
[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = "0.15"
uart_16550 = "0.3"
pic8259 = "0.11"
bootloader_api = "0.11"

# AArch64 specific dependencies
[target.'cfg(target_arch = "aarch64")'.dependencies]
aarch64-cpu = "9.4"
tock-registers = "0.9"

# Build as binary for AArch64, will be linked with bootloader for x86_64
[[bin]]
name = "debos-kernel"
path = "src/main.rs"
